--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -1,15 +1,28 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import '~xp.css/dist/98.css';
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow: hidden;
 }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+a {
+    color: blue !important;
+    text-decoration: underline !important;
+    cursor: auto !important;
+}
+
+a:visited{
+    color: purple !important;
+}
+a:hover{
+    cursor: pointer !important;
 }
 
 .bg-custom-100 {
