--- a/portfolio-app/src/components/play/djikstra/css/styles.css
+++ b/portfolio-app/src/components/play/djikstra/css/styles.css
@@ -1,8 +1,9 @@
 #djikstra_viewport {
-    height: 100%;
-    width: 100%;
+    position: absolute;
+    height: calc(100% - 25px);
+    width: calc(100% - 25px);
+    z-index: -50;
 }
-
 
 #game_board {
     width: 100%;
