--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -6,6 +6,8 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow: hidden;
+    width: 100vw;
+    height: 100vh;
 }
 
 code {
@@ -16,6 +18,10 @@ a {
     color: blue !important;
     text-decoration: underline !important;
     cursor: auto !important;
+}
+
+#tabMenuWrapper{
+    padding: 1%;
 }
 
 a:visited{
