--- a/portfolio-app/src/components/molecules/Article/index.css
+++ b/portfolio-app/src/components/molecules/Article/index.css
@@ -1,11 +1,6 @@
 .sidebar-layout {
   display: grid;
-  grid:
-    "sidebar body" 1fr
-    / auto 1fr;
   gap: 8px;
+  grid-template-rows: auto;
+  grid-template-columns: auto 1fr;
 }
-
-.sidebar { grid-area: sidebar; }
-.content { grid-area: content; }
-
