--- a/portfolio-app/src/components/molecules/Article/index.css
+++ b/portfolio-app/src/components/molecules/Article/index.css
@@ -3,4 +3,28 @@
   gap: 8px;
   grid-template-rows: auto;
   grid-template-columns: auto 1fr;
+  width: 100%;
+  height: 100%;
+}
+
+#img_holder{
+  width: auto;
+  height: auto;
+}
+
+.content > #img_holder > a > img {
+  display: block;
+  min-height: 0;
+  max-width: 315px;
+  max-height: 255px;
+  width: auto;
+  height: auto;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  min-width: 0;
 }
