--- a/portfolio-app/src/components/play/djikstra/css/styles.css
+++ b/portfolio-app/src/components/play/djikstra/css/styles.css
@@ -1,7 +1,7 @@
 #djikstra_viewport {
     position: absolute;
-    height: calc(100% - 25px);
-    width: calc(100% - 25px);
+    height: 100%;
+    width: 100%;
     z-index: -50;
 }
 
