--- a/portfolio-app/src/components/play/sirteT/css/styles.css
+++ b/portfolio-app/src/components/play/sirteT/css/styles.css
@@ -2,7 +2,7 @@
     display: grid;
     gap: 8px;
     width: 100%;
-    
+
 }
 
 
@@ -17,6 +17,10 @@
         max-width: 100%;
         max-height: 100%;
     }
+
+    #instructions {
+        grid-template-columns: auto auto;
+    }
 }
 
 @media screen and (orientation: landscape) and (min-width: 512px) {
@@ -29,11 +33,15 @@
     #instructions {
         max-width: 50%;
     }
+
+    #instructions {
+        grid-template-columns: auto 1fr;
+    }
 }
 
 #tetris_viewport,
 #instructions {
     max-height: 90%;
     display: grid;
-    grid-template-columns: auto auto;
+
 }
