--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -1,5 +1,4 @@
 @import '~xp.css/dist/98.css';
-
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -8,6 +7,8 @@ body {
     overflow: hidden;
     width: 100vw;
     height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
 code {
