--- a/portfolio-app/src/components/play/djikstra/css/styles.css
+++ b/portfolio-app/src/components/play/djikstra/css/styles.css
@@ -1,7 +1,8 @@
 #djikstra_viewport {
-    position: absolute;
-    height: 100%;
-    width: 100%;
+    position: fixed;
+    margin: 0 0 0 0;
+    height: 100vh;
+    width: 100vw;
     z-index: -50;
 }
 
